[project]
name = "PyDMX"
version = "0.1.0"
authors = [
  { name="Jacob Allen", email="jacob@polyomino.xyz" },
]
description = "A Python module for sending DMX512 data."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
