[project]
name = "PyDMX"
version = "0.1.0"
authors = [
  { name="Jacob Allen", email="jacob@polyomino.xyz" },
]
description = "A Python module for sending DMX512 data."
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/JMAlego/PyDMX"
"Bug Tracker" = "https://github.com/JMAlego/PyDMX/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
